projects/side_stuff/k8s/istio-up-and-running/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: some-domain-come
spec:
  host: some.domain.com
  subsets:
  - name: v1 
    labels:
      version: v1 
  - name: v2
    labels:
      version: v2

# DestinationRules are another tool that can be used to modify and 
# upgrade existing clusters. By creating subsets, new clusters are 
# created.
# Check out the new clusters that are created by running:
# istioctl proxy-config cluster istio-ingressgateway-6785fcd48-pr5xc -o json -n istio-system
